<resources>
    <string name="app_name">KissApp</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Imie</string>
    <string name="gender">Płeć</string>
    <string name="is_alive">Staus</string>
    <string name="origin_location">Pochodzenie</string>
    <string name="current_location">Lokalizacja</string>
</resources>
